# streamlit-shap-app

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  newrelic.ini  pyproject.toml  requirements.txt
.streamlit/: config.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: index.md
interesting_components/: app2.py  app3.py  app4.py  app5.py  echo.py  option_menu.py  tabs.py  template.html
pip/: requirements.txt
src/shap_app/: __main__.py  app.py  main.py
src/shap_app/configs/: __init__.py  settings.py
src/shap_app/datasets/: README.md  dataset_config.py  sample_datasetcard.yml
src/shap_app/datasets/boston_housing/: data_dictionary.py  datasetcard.yml  loader.py
src/shap_app/datasets/california_housing/: README.md  __init__.py  data_dictionary.py  loader.py
src/shap_app/io/: loaders.py
src/shap_app/pipelines/: pipeline_utils.py
src/shap_app/preprocessing/: binary.py
src/shap_app/trained_models/boston_housing/: catboost_regressor.pkl  catboost_regressor.py  catboost_regressor_w_preprocessing.pkl
src/shap_app/webapp/: chart_helpers.py  images.py  session_state.py  sidebar.py
src/shap_app/webapp/components/: dataset_info.py  dataset_summary.py  dataset_visualization.py  eda.py  eda_boxplots.py  eda_correlated_features.py  eda_correlations.py  eda_histograms.py  eda_intro.py  feature_engineering.py  loaders.py  model_info.py  outliers.py  project_intro.py  shap.py  shap_intro.py  shap_single.py  shap_summary.py
tests/webapp/components/: loaders_test.py
